[refactor] use virtualThreadPerTaskExecutor for data writer